# DNV_task

./: CMakeLists.txt
resources/: resources.qrc
resources/shaders/: fragment.glsl  vertex.glsl
src/: camera.cpp  camera.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  stlloader.cpp  stlloader.h
